Prevent button wrap to multilines

--- a/web/css/abstracts/mixins/_form.less
+++ b/web/css/abstracts/mixins/_form.less
@@ -53,6 +53,7 @@
         border-radius: @button__border-radius;
         box-shadow: @button__shadow;
         text-decoration: @button__text-decoration !important;
+        white-space: nowrap;
 
         &:disabled,
         &.disabled {
